--- a/content/index.njk
+++ b/content/index.njk
@@ -18,6 +18,8 @@ numberOfLatestPostsToShow: 3
 <p>{{ morePosts }} more post{% if morePosts != 1 %}s{% endif %} can be found in <a href="/blog/">the archive</a>.</p>
 {% endif %}
 
+test
+
 {# List every content page in the project #}
 {#
 <ul>
