--- a/content/index.njk
+++ b/content/index.njk
@@ -17,28 +17,8 @@ numberOfLatestPostsToShow: 3
                 <a href="index.html">link 3</a>
             </nav>
     <div id="hero_section" class="col-12">
-        <img src="./assets/hero image.jpg" alt="hero image" id="hero_image">
+        <img src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc?auto=format&fit=crop&q=80&w=2532&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="hero image" id="hero_image">
     </div>
-
-    <div class="row">
-        <div id="skills" class="col-sm">
-            <h2>Key Skills</h2>
-            <ul class="list">
-                <li id="php_point">PHP</li>
-                <li>Larvel</li>
-                <li>Javascript</li>
-                <li>Vue.js</li>
-                <li>HTML</li>
-            </ul>
-        </div>
-        <div id="projects" class="col-sm">
-            <h2>Projects</h2>
-            <ul>
-                <li>Twitter Clone</li>
-                <li>Pizza Ordering Site</li>
-                <li>Image Uploading Site</li>
-            </ul>
-        </div>
     </div>
     
 </div>
