added height to image

--- a/content/index.njk
+++ b/content/index.njk
@@ -16,7 +16,7 @@ numberOfLatestPostsToShow: 3
                 <a href="index.html">link 2</a>
                 <a href="index.html">link 3</a>
             </nav>
-    <div id="hero_section" class="col-12">
+    <div id="hero_section" class="col-12 max-width: 100%; and height: auto">
         <img src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc?auto=format&fit=crop&q=80&w=2532&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="hero image" id="hero_image">
     </div>
     </div>
