--- a/content/index.njk
+++ b/content/index.njk
@@ -11,7 +11,7 @@ numberOfLatestPostsToShow: 3
 
     <div class="row">
     <div id="hero_section" class="col-12 max-width: 80px; and height: 80px">
-        <img src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc?auto=format&fit=crop&q=80&w=2532&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="hero image" id="hero_image">
+        <img src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc" alt="hero image" id="hero_image">
     </div>
     </div>
 </div>
