--- a/content/index.njk
+++ b/content/index.njk
@@ -10,8 +10,8 @@ numberOfLatestPostsToShow: 3
 
 
     <div class="row">
-    <div id="hero_section" class="col-12 max-width: 80px; and height: 80px">
-        <img src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc" alt="hero image" id="hero_image">
+    <div id="hero_section" class="col-12">
+        <img class "max-width: 80px; and height: 80px" src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc" alt="hero image" id="hero_image">
     </div>
     </div>
 </div>
