added height to image

--- a/content/index.njk
+++ b/content/index.njk
@@ -11,7 +11,7 @@ numberOfLatestPostsToShow: 3
 
     <div class="row">
     <div id="hero_section" class="col-12">
-        <img class "max-width: 80px; and height: 80px" src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc" alt="hero image" id="hero_image">
+        <img width="500" height="600" src="https://images.unsplash.com/photo-1697564070857-58a1a1318abc" alt="hero image" id="hero_image">
     </div>
     </div>
 </div>
